--- a/sample_design.html
+++ b/sample_design.html
@@ -4,13 +4,13 @@
   <title>Permaculture</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/custom_style.css">
+  <link rel="stylesheet" href="custom_style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-green">
 
   <div class="navbar-header">
-    <a class="navbar-brand" href="/index.html">Permaculture</a>
+    <a class="navbar-brand" href="index.html">Permaculture</a>
   </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span ><i class="material-icons center_icon">list</i></span>
@@ -18,9 +18,9 @@
   <div class="navbar-collapse collapse" id="navbarSupportedContent">
 
     <ul class="nav navbar-nav" align="left">
-        <li class="nav-item"><a class="nav-link" href="/about_permaculture.html">About Permaculture</a></li>
-      <li class="nav-item"><a class="nav-link active" href="/sample_design.html">Sample Design</a></li>
-      <li class="nav-item"><a class="nav-link" href="/works_cited.html">Works Cited</a></li>
+        <li class="nav-item"><a class="nav-link" href="about_permaculture.html">About Permaculture</a></li>
+      <li class="nav-item"><a class="nav-link active" href="sample_design.html">Sample Design</a></li>
+      <li class="nav-item"><a class="nav-link" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
 
@@ -52,11 +52,11 @@
     <h3>Potential Site 1: Brookland Park</h3>
     <p>519 Melrose Ct, Iowa City, IA 52246</p>
     <p>This is the park nearest my house, it has a little gravel path that runs through it, about .2 miles in circumference. It has an intermittent stream running through it, with river-type grasses all around it. There is a willow on one end, with Magnolia trees and some other trees (soon to be identified). There is a slight hill, with a sitting gazebo and a small playground at the top. My concerns are that the stream running through could make this too unique of a site, and that what I'll learn might be less applicable to a general permaculture site.</p>
-    <img src="/images/site_1_1.JPG" class="image-fluid smaller_img"  alt="site 1">
-    <img src="/images/site_1_2.JPG" class="image-fluid smaller_img"  alt="site 1">
-    <img src="/images/site_1_3.JPG" class="image-fluid smaller_img"  alt="site 1">
-    <img src="/images/site_1_4.JPG" class="image-fluid smaller_img"  alt="site 1">
-    <img src="/images/site_1_5.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_1.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_2.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_3.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_4.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_5.JPG" class="image-fluid smaller_img"  alt="site 1">
   </div>
 
 </div>
@@ -68,11 +68,11 @@
     <h3>Potential Site 2: Empty Field with Trees</h3>
     <p>location <a href="https://www.google.com/maps/@41.6530195,-91.5453029,19.39z">here</a></p>
     <p>This site is located between church and train tracks. Stream running along south side near train tracks. Occasional fairly large trees along edges. Hill on one side, facing south. Good light all around. I imagine this site would be more typical, but less interesting. </p>
-    <img src="/images/site_2_1.JPG" class="image-fluid smaller_img"  alt="site 2">
-    <img src="/images/site_2_2.JPG" class="image-fluid smaller_img"  alt="site 2">
-    <img src="/images/site_2_3.JPG" class="image-fluid smaller_img"  alt="site 2">
-    <img src="/images/site_2_4.JPG" class="image-fluid smaller_img"  alt="site 2">
-    <img src="/images/site_2_5.JPG" class="image-fluid smaller_img"  alt="site 2">
+    <img src="images/site_2_1.JPG" class="image-fluid smaller_img"  alt="site 2">
+    <img src="images/site_2_2.JPG" class="image-fluid smaller_img"  alt="site 2">
+    <img src="images/site_2_3.JPG" class="image-fluid smaller_img"  alt="site 2">
+    <img src="images/site_2_4.JPG" class="image-fluid smaller_img"  alt="site 2">
+    <img src="images/site_2_5.JPG" class="image-fluid smaller_img"  alt="site 2">
   </div>
 </div>
 </div>
