--- a/works_cited.html
+++ b/works_cited.html
@@ -4,7 +4,7 @@
   <title>Works Cited</title>
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/custom_style.css">
+  <link rel="stylesheet" href="custom_style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-green">
@@ -18,9 +18,9 @@
   <div class="navbar-collapse collapse" id="navbarSupportedContent">
 
     <ul class="nav navbar-nav" align="left">
-        <li class="nav-item"><a class="nav-link" href="/about_permaculture.html">About Permaculture</a></li>
-      <li class="nav-item"><a class="nav-link" href="/sample_design.html">Sample Design</a></li>
-      <li class="nav-item"><a class="nav-link active" href="/works_cited.html">Works Cited</a></li>
+        <li class="nav-item"><a class="nav-link" href="about_permaculture.html">About Permaculture</a></li>
+      <li class="nav-item"><a class="nav-link" href="sample_design.html">Sample Design</a></li>
+      <li class="nav-item"><a class="nav-link active" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
 
