adding new styling and ethos draft

--- a/about_permaculture.html
+++ b/about_permaculture.html
@@ -10,7 +10,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-green">
 
   <div class="navbar-header">
-    <a class="navbar-brand" href="/index.html">Permaculture</a>
+    <a class="navbar-brand" href="index.html">Permaculture</a>
   </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span ><i class="material-icons center_icon">list</i></span>
@@ -18,8 +18,9 @@
   <div class="navbar-collapse collapse" id="navbarSupportedContent">
 
     <ul class="nav navbar-nav" align="left">
-        <li class="nav-item"><a class="nav-link active" href="about_permaculture.html">About Permaculture</a></li>
-      <li class="nav-item"><a class="nav-link" href="sample_design.html">Sample Design</a></li>
+      <li class="nav-item"><a class="nav-link active" href="about_permaculture.html">Ethos of Permaculture</a></li>
+      <li class="nav-item"><a class="nav-link" href="sample_design.html">Possible Design Concepts</a></li>
+      <li class="nav-item"><a class="nav-link" href="community_guide.html">Community Guide</a></li>
       <li class="nav-item"><a class="nav-link" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
@@ -27,30 +28,44 @@
 </nav>
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row page_header pb-5">
    <div class="col-12" >
 
-      <div class="row mt-5 info-header justify-content-center" >
+      <div class="row mt-5 mb-0 info-header justify-content-center" >
         <div class="col-10">
           <div class="row">
-            <div class="col-12" align="center">
-              <h1>What is permaculture?</h1>
+            <div class="col-12 mt-5" align="center">
+              <h1 >Ethos of Permaculture</h1>
             </div>
           </div>
         </div>
       </div>
 
-</div>
+  </div>
  </div>
 
-<div class="row">
-  <div class="col-12" align="center">
-    <br>
-    <br>
-    <p>I haven't written anything here yet! It was invented in Australia! Ending Alienation from nature! Valuing our place in the ecosystem! Resilience! Intrinsic value of all species! </p>
+<div class="row  overconsumption justify-content-start">
+  <div class="col-lg-3 col-md-2 col-sm-1 col-xs-1"></div>
+  <div class="col-lg-4 col-md-4 col-sm-5 pt-5 pb-5" align="right" >
+    <h4 class="mt-2">Permaculture begins with the recognition that humanity's way of life has tended towards overconsumption, inequality and alienation from nature, and that sustainable changes to our role on earth need to be made.</h4>
   </div>
 </div>
- 
+
+<div class="row  overconsumption justify-content-center">
+  <div class="col-6 pt-5 pb-5" align="center" >
+    <h4 class="mt-2">Permaculture applies an ecological view to our approach to design, consciously crafting our relationship with nature. It provides tools to consider the health and productivity of all communities, both human and otherwise, in decision making.</h4>
+  </div>
+</div>
+<div class="row  overconsumption justify-content-center">
+  <div class="col-6 pt-5 pb-5" align="center" >
+    <h4 class="mt-2">At its most practical, permaculture's goal is to guide the creation of edible landscapes. These landscapes should mirror naturalized diversity and foster a self-managed system of plants, animals and, humans.</h4>
+  </div>
+</div>
+</div>
+<div class="row  overconsumption justify-content-center">
+  <div class="col-6 pt-5 pb-5" align="center" >
+    <h4 class="mt-2">The creation of these systems should account for all stakeholders, involve minimal energy input, and restore and conserve local ecosystems. At all scales, from garden to the globe, designing for ecological health and self-reliance are what permaculture seeks to achieve.</h4>
+  </div>
 </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
