--- a/sample_design.html
+++ b/sample_design.html
@@ -18,8 +18,9 @@
   <div class="navbar-collapse collapse" id="navbarSupportedContent">
 
     <ul class="nav navbar-nav" align="left">
-        <li class="nav-item"><a class="nav-link" href="about_permaculture.html">About Permaculture</a></li>
-      <li class="nav-item"><a class="nav-link active" href="sample_design.html">Sample Design</a></li>
+      <li class="nav-item"><a class="nav-link" href="about_permaculture.html">Ethos of Permaculture</a></li>
+      <li class="nav-item"><a class="nav-link active" href="sample_design.html">Possible Design Concepts</a></li>
+      <li class="nav-item"><a class="nav-link" href="community_guide.html">Community Guide</a></li>
       <li class="nav-item"><a class="nav-link" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
@@ -27,16 +28,14 @@
 </nav>
 
 <div class="container-fluid" >
-  <div class="row">
+  <div class="row page_header pb-5">
    <div class="col-12" >
 
-      <div class="row mt-5 info-header justify-content-center" >
+      <div class="row mt-5 mb-0 info-header justify-content-center" >
         <div class="col-10">
           <div class="row">
-            <div class="col-12" align="center">
+            <div class="col-12 mt-5" align="center">
               <h1>Sample site design</h1>
-              <p>For both these sites I imagine creating a design that uses only part of the area, but we can discuss that</p>
-              <hr>
             </div>
           </div>
         </div>
