--- a/works_cited.html
+++ b/works_cited.html
@@ -10,7 +10,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-green">
 
   <div class="navbar-header">
-    <a class="navbar-brand" href="/index.html">Permaculture</a>
+    <a class="navbar-brand" href="index.html">Permaculture</a>
   </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span ><i class="material-icons center_icon">list</i></span>
@@ -18,8 +18,9 @@
   <div class="navbar-collapse collapse" id="navbarSupportedContent">
 
     <ul class="nav navbar-nav" align="left">
-        <li class="nav-item"><a class="nav-link" href="about_permaculture.html">About Permaculture</a></li>
-      <li class="nav-item"><a class="nav-link" href="sample_design.html">Sample Design</a></li>
+      <li class="nav-item"><a class="nav-link" href="about_permaculture.html">Ethos of Permaculture</a></li>
+      <li class="nav-item"><a class="nav-link" href="sample_design.html">Possible Design Concepts</a></li>
+      <li class="nav-item"><a class="nav-link" href="community_guide.html">Community Guide</a></li>
       <li class="nav-item"><a class="nav-link active" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
@@ -27,13 +28,13 @@
 </nav>
 
 <div class="container-fluid" >
-  <div class="row">
+  <div class="row page_header pb-5">
    <div class="col-12" >
 
-      <div class="row mt-5 info-header justify-content-center" >
+      <div class="row mt-5 mb-0 info-header justify-content-center" >
         <div class="col-10">
           <div class="row">
-            <div class="col-12" align="center">
+            <div class="col-12 mt-5" align="center">
               <h1>Works Cited</h1>
             </div>
           </div>
@@ -43,26 +44,26 @@
 </div>
  </div>
 
-<div class="row justify-content-center ">
+<div class="row justify-content-center neutral_bg" style="height:100%">
   <div class="col-8" >
     <br>
     <br>
     <h6>Here is a list of sources from which I got my information</h6>
     <ul>
       <li>
-        <p>Henfrey, Thomas W. “Designing for Resilience: Permaculture as a Transdisciplinary Methodology in Applied Resilience Research.” Ecology and Society, vol. 23, no. 2, 2018. JSTOR, www.jstor.org/stable/26799096. Accessed 10 Oct. 2020.</p>
+        <h5>Henfrey, Thomas W. “Designing for Resilience: Permaculture as a Transdisciplinary Methodology in Applied Resilience Research.” Ecology and Society, vol. 23, no. 2, 2018. JSTOR, www.jstor.org/stable/26799096. Accessed 10 Oct. 2020.</h5>
       </li>
       <li>
-        <p>BILGRAMI, AKEEL, editor. Nature and Value. Columbia University Press, 2020. JSTOR, www.jstor.org/stable/10.7312/bilg19462. Accessed 10 Oct. 2020.</p>
+        <h5>BILGRAMI, AKEEL, editor. Nature and Value. Columbia University Press, 2020. JSTOR, www.jstor.org/stable/10.7312/bilg19462. Accessed 10 Oct. 2020.</h5>
       </li>
       <li>
-        <p>“Political Dimensions – Agriculture and Class Struggle.” Sustainable Food Systems: The Role of the City, by Robert Biel, UCL Press, London, 2016, pp. 48–57. JSTOR, www.jstor.org/stable/j.ctt1j1vzc5.10. Accessed 10 Oct. 2020.</p>
+        <h5>“Political Dimensions – Agriculture and Class Struggle.” Sustainable Food Systems: The Role of the City, by Robert Biel, UCL Press, London, 2016, pp. 48–57. JSTOR, www.jstor.org/stable/j.ctt1j1vzc5.10. Accessed 10 Oct. 2020.</h5>
       </li>
       <li>
-        <p>DE LA BELLACASA, MARÍA PUIG. Matters of Care: Speculative Ethics in More than Human Worlds. University of Minnesota Press, 2017. JSTOR, www.jstor.org/stable/10.5749/j.ctt1mmfspt. Accessed 10 Oct. 2020.</p>
+        <h5>DE LA BELLACASA, MARÍA PUIG. Matters of Care: Speculative Ethics in More than Human Worlds. University of Minnesota Press, 2017. JSTOR, www.jstor.org/stable/10.5749/j.ctt1mmfspt. Accessed 10 Oct. 2020.</h5>
       </li>
       <li>
-        <p>Vira, Bhaskar, et al., editors. “The Historical, Environmental and Socio-Economic Context of Forests and Tree-Based Systems for Food Security and Nutrition.” Forests and Food: Addressing Hunger and Nutrition Across Sustainable Landscapes, 1st ed., Open Book Publishers, Cambridge, UK, 2015, pp. 73–136. JSTOR, www.jstor.org/stable/j.ctt19b9jsg.8. Accessed 10 Oct. 2020.</p>
+        <h5>Vira, Bhaskar, et al., editors. “The Historical, Environmental and Socio-Economic Context of Forests and Tree-Based Systems for Food Security and Nutrition.” Forests and Food: Addressing Hunger and Nutrition Across Sustainable Landscapes, 1st ed., Open Book Publishers, Cambridge, UK, 2015, pp. 73–136. JSTOR, www.jstor.org/stable/j.ctt19b9jsg.8. Accessed 10 Oct. 2020.</h5>
       </li>
 
     </ul>
