--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
   <div class="navbar-collapse collapse" id="navbarSupportedContent">
 
     <ul class="nav navbar-nav" align="left">
-      <li class="nav-item"><a class="nav-link" href="about_permaculture.html">About Permaculture</a></li>
-      <li class="nav-item"><a class="nav-link" href="sample_design.html">Sample Design</a></li>
+      <li class="nav-item"><a class="nav-link" href="about_permaculture.html">Ethos of Permaculture</a></li>
+      <li class="nav-item"><a class="nav-link" href="sample_design.html">Possible Design Concepts</a></li>
+      <li class="nav-item"><a class="nav-link" href="community_guide.html">Community Guide</a></li>
       <li class="nav-item"><a class="nav-link" href="works_cited.html">Works Cited</a></li>
     </ul>
   </div>
@@ -27,13 +28,13 @@
 </nav>
 
 <div class="container-fluid">
-  <div class="row">
+  <div class="row page_header pb-5">
    <div class="col-12" >
 
-      <div class="row mt-5 info-header justify-content-center" >
+      <div class="row mt-5 mb-0 info-header justify-content-center" >
         <div class="col-10">
           <div class="row">
-            <div class="col-12" align="center">
+            <div class="col-12 mt-5" align="center">
               <h1>Learning about Permaculture!</h1>
             </div>
           </div>
