--- a/about_permaculture.html
+++ b/about_permaculture.html
@@ -44,27 +44,28 @@
   </div>
  </div>
 
-<div class="row  overconsumption justify-content-start">
-  <div class="col-lg-3 col-md-2 col-sm-1 col-xs-1"></div>
+<div class="row  perm_0 justify-content-start">
+  <div class="col-lg-2 col-md-2 col-sm-1 col-xs-1"></div>
   <div class="col-lg-4 col-md-4 col-sm-5 pt-5 pb-5" align="right" >
     <h4 class="mt-2">Permaculture begins with the recognition that humanity's way of life has tended towards overconsumption, inequality and alienation from nature, and that sustainable changes to our role on earth need to be made.</h4>
   </div>
 </div>
 
-<div class="row  overconsumption justify-content-center">
-  <div class="col-6 pt-5 pb-5" align="center" >
-    <h4 class="mt-2">Permaculture applies an ecological view to our approach to design, consciously crafting our relationship with nature. It provides tools to consider the health and productivity of all communities, both human and otherwise, in decision making.</h4>
+<div class="row  perm_1 justify-content-center">
+  <div class="col-4 pt-5 pb-5" align="left" >
+    <h4 class="mt-5">Permaculture applies an ecological view to our approach to design, consciously crafting our relationship with nature. It provides tools to consider the health and productivity of all communities, both human and otherwise, in decision making.</h4>
   </div>
 </div>
-<div class="row  overconsumption justify-content-center">
-  <div class="col-6 pt-5 pb-5" align="center" >
-    <h4 class="mt-2">At its most practical, permaculture's goal is to guide the creation of edible landscapes. These landscapes should mirror naturalized diversity and foster a self-managed system of plants, animals and, humans.</h4>
+<div class="row  perm_2 justify-content-center">
+  <div class="col-4 pt-5 pb-5" align="center" >
+    <h4 class="mt-5">At its most practical, permaculture's goal is to guide the creation of edible landscapes. These landscapes should mirror naturalized diversity and foster a self-managed system of plants, animals and, humans.</h4>
   </div>
 </div>
 </div>
-<div class="row  overconsumption justify-content-center">
+<div class="row  perm_3 justify-content-center">
+  <div class="col-lg-2 col-md-2 col-sm-1 col-xs-1"></div>
   <div class="col-6 pt-5 pb-5" align="center" >
-    <h4 class="mt-2">The creation of these systems should account for all stakeholders, involve minimal energy input, and restore and conserve local ecosystems. At all scales, from garden to the globe, designing for ecological health and self-reliance are what permaculture seeks to achieve.</h4>
+    <h4 class="mt-5">The creation of these systems should account for all stakeholders, involve minimal energy input, and restore and conserve local ecosystems. At all scales, from garden to the globe, designing for ecological health and self-reliance are what permaculture seeks to achieve.</h4>
   </div>
 </div>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
