--- a/sample_design.html
+++ b/sample_design.html
@@ -44,39 +44,125 @@
 </div>
  </div>
 
-<div class="row justify-content-center">
-  <div class="col-10" align="center">
+<div class="row justify-content-center neutral_bg">
+  <div class="col-10" align="center" >
     <br>
     <br>
-    <h3>Potential Site 1: Brookland Park</h3>
-    <p>519 Melrose Ct, Iowa City, IA 52246</p>
-    <p>This is the park nearest my house, it has a little gravel path that runs through it, about .2 miles in circumference. It has an intermittent stream running through it, with river-type grasses all around it. There is a willow on one end, with Magnolia trees and some other trees (soon to be identified). There is a slight hill, with a sitting gazebo and a small playground at the top. My concerns are that the stream running through could make this too unique of a site, and that what I'll learn might be less applicable to a general permaculture site.</p>
-    <img src="images/site_1_1.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <h3 class="white">Brookland Park</h3>
+    <p class="white">established 1924</p>
+    <p class="white">519 Melrose Ct, Iowa City, IA 52246</p>
+
+    <p class="white">This 2.4 acre site has has an intermittent rain-fed stream running through it. The stream is at the middle of a small valley microclimate, with slopes on either side. North of the stream is a mowed grass flat area and a more pronounced small south-facing hill that recieves sunlight. Near the top of this incline is a gazebo with picnic tables, a water spigot, a permanent grill and a number of large embedded rocks on the hillside. Around the gazebo and jungle jim are chinese magnolia and hemlock trees. A small brick-layed clearing set into the hill lies across the path from the gazebo with 2-ft walls holding in the soil around it and a free book library within. East from the gazebo, a gentle decline leads to a jungle-jim area with wood chipped ground and next to that a swing-set and a bench. East of that, sits a bench underneath a magnificent ancient elm. Reeds, cattails, and grasses all around the stream provide good habitat for goldfinch, sparrows, and ducks. There is a beautiful willow on the West end, near a gravel bridge, seen from the park entrance. Trees surround the park: Norway Maple, ash, mulberry, buckthorn and honeysuckle abound. Rabbits, squirrels, and sparrows use the vegetation for protection. </p>
+    <p class="white">The site is in climactic zone 5b. According to <a href="https://websoilsurvey.sc.egov.usda.gov/App/WebSoilSurvey.aspx">websoilsurvey.gov</a> the soil is 40% Fayette silt loam, till plain, 9 to 14 percent slopes, 30% Downs silt loam, till plain, 2 to 5 percent slopes and 30% Colo-Ely complex, 0 to 5 percent slopes</p>
+  </div>
+</div>
+<div class="row justify-content-center neutral_bg">
+  <div class="col-12 map_div">
+    <!--<img src="images/site_1_1.JPG" class="image-fluid smaller_img"  alt="site 1">
     <img src="images/site_1_2.JPG" class="image-fluid smaller_img"  alt="site 1">
     <img src="images/site_1_3.JPG" class="image-fluid smaller_img"  alt="site 1">
     <img src="images/site_1_4.JPG" class="image-fluid smaller_img"  alt="site 1">
-    <img src="images/site_1_5.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_5.JPG" class="image-fluid smaller_img"  alt="site 1">-->
+     <img src="map.png" class="image-fluid test-abs screen_width_img"  alt="site 1">
+    <img src="trees.png" id="trees-layer" class="image-fluid test-abs screen_width_img"  alt="site 1" >
+    <img src="water.png" id="water-layer" class="image-fluid test-abs screen_width_img"  alt="site 1" >
+    <img src="roads.png" id="roads-layer" class="image-fluid test-abs screen_width_img"  alt="siteroads">
+    <img src="paths.png" id="paths-layer" class="image-fluid test-abs screen_width_img"  alt="siteroads">
+    <img src="structures.png" id="structures-layer" class="image-fluid test-abs screen_width_img"  alt="siteroads">
+       <div class="legend">
+         <h3 class="" id="legend_title">Toggle Layers</h3>
+         <div class=ml-4>
+          <input type="checkbox" class="form-check-input" id="trees" class="layercheck" checked>
+          <label class="form-check-label" for="trees">Trees Layer</label>
+        </div>
+        <div class=ml-4>
+          <input type="checkbox" class="form-check-input" id="water" class="layercheck" checked>
+          <label class="form-check-label" for="water">Water & Drainage Layer</label>
+        </div>
+        <div class=ml-4>
+          <input type="checkbox" class="form-check-input" id="roads" class="layercheck" checked>
+          <label class="form-check-label" for="roads">Roads Layer</label>
+        </div>
+        <div class=ml-4>
+          <input type="checkbox" class="form-check-input" id="paths" class="layercheck" checked>
+          <label class="form-check-label" for="paths">paths Layer</label>
+        </div>
+        <div class=ml-4>
+          <input type="checkbox" class="form-check-input" id="structures" class="layercheck" checked>
+          <label class="form-check-label" for="structures">structures Layer</label>
+        </div>
+        </div>
+    </div>
+  </div>
+  <div class="row justify-content-center neutral_bg">
+  <div class="col-10" align="center" >
+    <br>
+    <h3 class="white">Uses & Services</h3>
+    <br>
+    <h4 class="white">Human Uses</h4>
+    <p class="white" align="left">
+      Humans interact with the park in a number of ways. Classes of children from the nearby preschool come to play on the jungle jim, people of all ages walk the gravel loop to get a refreshing respite in nature, commuters on their way to work at the hospital use it as a shortcut, others use the jungle jim to exercise, and still more come to lounge in the grass or picnic with the grill at the gazebo. It is a site where people occasionally have get togethers, and where the unhoused can relax in summer heat and drink water. 
+    </p>
+    <h4 class="white">Wildlife Uses</h4>
+     <p class="white" align="left">
+      A number of birds find shelter and food in the wooded areas to the south and west of the park. Cardinals, sparrows, goldfinch, and other small birds use the vegetation for shelter, and eat the buckthorn, honeysuckle and mulberry fruit. Ducks spend time in the stream when it is high. The tall norway spruce could be used as signal trees by hawks and crows. Squirrels and rabbits are frequent visitors, the rabbits finding easy protection in the shrubs. Though I have not seen them, I suspect fox and deer and muskrat wander through occasionally.
+    </p>
+    <h4 class="white">Services</h4>
+    <p class="white">
+      Provides aesthetic beauty! cleans air, water. Stabilizes microclimate, provides food, shelter, leisure activities for all life. Aesthetic Beauty baby!
+    </p>
+  </div>
+</div>
+
+  <div class="row justify-content-center neutral_bg">
+  <div class="col-12 map_div">
+    <!--<img src="images/site_1_1.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_2.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_3.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_4.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_5.JPG" class="image-fluid smaller_img"  alt="site 1">-->
+     <img src="map.png" class="image-fluid test-abs screen_width_img"  alt="site 1">
+    <img src="uses.png" id="uses-layer" class="image-fluid test-abs screen_width_img"  alt="site 1" >
+  
+  </div>
   </div>
 
-</div>
-<hr>
- <div class="row justify-content-center">
-  <div class="col-10" align="center">
+
+
+ <div class="row justify-content-center neutral_bg">
+  <div class="col-10" align="center" >
     <br>
+    <h3 class="white">Design Plan</h3>
     <br>
-    <h3>Potential Site 2: Empty Field with Trees</h3>
-    <p>location <a href="https://www.google.com/maps/@41.6530195,-91.5453029,19.39z">here</a></p>
-    <p>This site is located between church and train tracks. Stream running along south side near train tracks. Occasional fairly large trees along edges. Hill on one side, facing south. Good light all around. I imagine this site would be more typical, but less interesting. </p>
-    <img src="images/site_2_1.JPG" class="image-fluid smaller_img"  alt="site 2">
-    <img src="images/site_2_2.JPG" class="image-fluid smaller_img"  alt="site 2">
-    <img src="images/site_2_3.JPG" class="image-fluid smaller_img"  alt="site 2">
-    <img src="images/site_2_4.JPG" class="image-fluid smaller_img"  alt="site 2">
-    <img src="images/site_2_5.JPG" class="image-fluid smaller_img"  alt="site 2">
+    <h4 class="white">Main Design</h4>
+    <p class="white" align="left">
+     Before getting into specifics, I'm trying to establish a series of zones such that all participants in the environment will be benefitted by the changes. Ideally this will be a system where not too much labor will have to be expended to sustain it once it is established. It seeks not to make huge alterations to the land, but change the way it produces. First, I would like to establish a windbreak on the eastern edge, this will provide additional bird, small mammal habitat and give the park a sense of seclusion from the road. Then, along the path going north-south, I would like to replace the grass field with native flowers and edible herbs that benefit from full sun and very moist soil. Just past them up the hill near the gazebo I would like to grow and establish more fruit trees--apple and pair. Replacing some of the honeysuckle in the understory with more productive berry plants would be costly but ideal. I would keep a lawny area with lots of clover and grasses near the jungle jim and bench to provide a lounging and play area. Behind the bench and under the elm, next to the willow, I would like to build a more secluded keyhole garden with another bench. Across the stream, where it is drier, I would like to plant primarily native grasses and good pollinator plants. Additionally, I propose building a wood-chipped path through the new herbaceous field that leads both to the gazebo, the spigot, and the playground, and provides a framing view for the willow at the end of the park.
+    </p>
   </div>
 </div>
+
+  <div class="row justify-content-center neutral_bg">
+  <div class="col-12 map_div">
+    <!--<img src="images/site_1_1.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_2.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_3.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_4.JPG" class="image-fluid smaller_img"  alt="site 1">
+    <img src="images/site_1_5.JPG" class="image-fluid smaller_img"  alt="site 1">-->
+     <img src="map.png" class="image-fluid test-abs screen_width_img"  alt="site 1">
+
+    <img src="proposal_1.png" id="uses-layer" class="image-fluid test-abs screen_width_img"  alt="site 1" >
+    <img src="proposal_path.png" id="uses-layer" class="image-fluid test-abs screen_width_img"  alt="site 1" >
+  
+  </div>
+  </div>
+
+
 </div>
+
+
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.2.0/d3.min.js"></script>
+  <script src="permaculture.js"></script>
 </body>
 </html>
