adding initial tree labels

--- a/sample_design.html
+++ b/sample_design.html
@@ -101,7 +101,7 @@
     <br>
     <h4 class="white">Human Uses</h4>
     <p class="white" align="left">
-      Humans interact with the park in a number of ways. Classes of children from the nearby preschool come to play on the jungle jim, people of all ages walk the gravel loop to get a refreshing respite in nature, commuters on their way to work at the hospital use it as a shortcut, others use the jungle jim to exercise, and still more come to lounge in the grass or picnic with the grill at the gazebo. It is a site where people occasionally have get togethers, and where the unhoused can relax in summer heat and drink water. 
+      Humans interact with the park in a number of ways. Most foot traffic is folks walking to and from the nearby university hospital. Classes of children from the nearby preschool come to play on the jungle jim, people of all ages walk the gravel loop to get a refreshing respite in nature, others use the jungle jim to exercise, and still more come to lounge in the grass or picnic with the grill at the gazebo. It is a site where people occasionally have get togethers, and where the unhoused can relax in summer heat. 
     </p>
     <h4 class="white">Wildlife Uses</h4>
      <p class="white" align="left">
