adding site notes

--- a/sample_design.html
+++ b/sample_design.html
@@ -199,15 +199,20 @@
     </div>
     <h4 class="white accordion" id="windbreak">Windbreak</h4>
     <div id="windbreak_div" class="bg_image row hidden">
-<div class="col-6">
+<div class="col-6 mt-2" align="left">
+        <h4>Description</h4>
+        <p>The first planting to be done is to establish small a visual block and windbreak along the east side of the park, providing a buffer between the park and Greenwood Dr. We will include the already present canopy honylocust trees in this zone.</p>
         <h4>Planting</h4>
-        <p></p>
+        <p>We will purchase at least two different cultivars of hardy dwarf sweet cherry trees and a hazlenut and plant them along the hillside north of the stream, we will also plant some pussy willows and potentially arrowwood directly next to the stream. During this process we will companion plant guilds of shrub and herbs, to further prevent windflow, provide nitrogen fixing and pest repulsion. The companions will be chive, comfrey, chamomile, borage, marigold, nasturtium, asparagus. South of the path forking towards Greenwood Dr. and the stream we will establish a raspberry bramble. </p>
       </div>
     </div>
     <h4 class="white accordion" id="orchard">Fruit Trees & Swales</h4>
     <div id="orchard_div" class="bg_image row hidden">
 <div class="col-6">
-        <p>Hi There</p>
+          <h4>Description</h4>
+        <p>We will dig out 2 small swales along the contours of the hill between the path and the gazebo, then plant dwarf fruit and nut trees, between the already-present chinese magnolia and hawthorne. We will plant these trees along these swales and plant companion guilds between them, leading down to the woodchipped path. </p>
+        <h4>Planting</h4>
+        <p>We will purchase probably 2 hardy dwarf apples, one pear, and one hazlenut to plant along the swales. The ungulating path will curve towards the fruit trees for access, while along the path, and underneath the trees, similar companions to the windbreak will be planted--yarrow, chive, comfrey, marigold, fennel, nasturtium, borage.</p>
       </div>
     </div>
 
@@ -224,19 +229,30 @@
     <h4 class="white accordion" id="riparian">Riparian Area</h4>
     <div id="riparian_div" class="bg_image row hidden">
 <div class="col-6">
-        <p>Hi There</p>
+       <h4>Description</h4>
+        <p>Next spring, we can begin planting the riparian area. This zone, generally to the south of the woodchip path, and running along both sides of the stream for a few yards on either side all the way to the willow at the West end of the park, becomes fully saturated during rainstorms and provides wonderful wildlife viewing.</p>
+        <h4>Planting</h4>
+        <p>Within the first curve of the path, we will establish moist riparian forbes--swamp milkweed, blue flag iris, joe-pye weed, and aster. These seeds for these plants will be sown in areas between the defined plantings. The defined plantings will be the already present cattails, and seeded rose mallow shrubs going west along the stream. Within the second curve of the path we will maintain buffalo grass and place rocks along the stream, where we will plant sedges such as juncus effusius. This area will be kept more clear for lounging. </p>
       </div>
     </div>
     <h4 class="white accordion" id="keyhole">Shade-tolerant Keyhole Garden</h4>
     <div id="keyhole_div" class="bg_image row hidden">
 <div class="col-6">
-        <p>Hi There</p>
+      <h4>Description</h4>
+        <p>This keyhole garden, maximizing edge space and providing a private area to sit, will be planted with shade and moisture loving herbs and forbes and ground cover. With stone slabs or the cardboard-woodchip combination, we will lay out the path and sitting area, then clear and plant the shrubs and plants.</p>
+      <h4>Planting</h4>
+        <p>The shrubs creating privacy on the east side will be elderberry, and then the herb areas will be planted with trillium, palm sedge, bee balm, blue stemmed goldenrod. On the ground between the slabs we will plant arctic strawberry and thyme.</p>
       </div>
     </div>
     <h4 class="white accordion" id="grasses">Grasses, wildflowers</h4>
     <div id="grasses_div" class="bg_image row hidden">
 <div class="col-6">
-        <p>Hi There</p>
+  <h4>Description</h4>
+        <p>Along the south edge, below the path and really anywhere there is sunlight we will sow seeds of hardy prairie grasses and forbes. Where buffalo grass is growing, we wil clear it and sow the seeds in the fall.</p>
+  <h4>Planting</h4>
+     <p>
+       The species used will be a seed mix including-smooth aster, purple prairie coneflower, grey headed coneflower, milkweed, little bluestem, and some of the plants from the riparian area depending on proximity to the stream.
+     </p>
       </div>
     </div>
   </div>
@@ -245,20 +261,21 @@
  <div class="row justify-content-center neutral_bg">
   <div class="col-10" align="center" >
     <br>
-    <h3 class="white">Year 3: Invasive Replacement, Adjustments</h3>
+    <h3 class="white">Year 3: Invasive Replacement, Adjustments, Grassy Area</h3>
     <br>
   </div>
   <div class="col-8" align="center">
     <h4 class="white accordion" id="invasive">Invasive areas</h4>
     <div id="invasive_div" class="bg_image row hidden">
-<div class="col-6">
-        <p>Hi There</p>
+      <div class="col-12">
+      <h4>Description</h4>
+        <p>As the park develops, potentially removing some of the honeysuckle, buckthorn and garlic mustard growing along the edges and replacing them with less invasive more useful shrubs could be helpful. However, seeing as these plants are already broviding some ecosystem benefits, and anumber of nearby houses have them planted ornamentally, it is not urgent. </p>
       </div>
     </div>
     <h4 class="white accordion" id="long_term">Long term and Evaluation</h4>
     <div id="long_term_div" class="bg_image row hidden">
-<div class="col-6">
-        <p>Hi There</p>
+<div class="col-12 mt-3">
+        <p>As these plant communities develop, we will see what plants thrive and what don't, adjusting our plans depending on how well certain areas, and species do. We will continue to work to establish successional diversity, so occasional weeding, replanting, and pruning will be necessary. We will also need to observe how human and animal use changes and make plans accordingly, perhaps we establish raised beds for more intensive cultivation, perhaps we plant more flowering species, or we create a larger lawn zone. Maybe we create a grape-vine trellis over the sunny side of the gazebo for additional shade during summer. Who knows!</p>
       </div>
     </div>
       
